<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xrigau="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <com.xrigau.syncscrolling.view.EnhancedScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/retry"
        android:fadingEdge="none" >

        <com.xrigau.syncscrolling.view.SynchronizedRelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            xrigau:placeholderView="@+id/base_view"
            xrigau:synchronizedView="@+id/synchronized_view" >

            <LinearLayout
                android:id="@+id/layout_search_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/label_loans" />

                    <EditText
                        android:id="@+id/edittext_loans"
                        style="@style/disableTextColor"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:enabled="false"
                        android:gravity="center_horizontal"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:singleLine="true"
                        android:text="" >
                    </EditText>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/currency" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/label_interest_rate" />

                    <EditText
                        android:id="@+id/edittext_interest_rate"
                        style="@style/disableTextColor"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:enabled="false"
                        android:gravity="center_horizontal"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:singleLine="true" >
                    </EditText>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/percent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/label_loan_term" />

                    <EditText
                        android:id="@+id/edittext_term"
                        style="@style/disableTextColor"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:enabled="false"
                        android:gravity="center_horizontal"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:singleLine="true" >
                    </EditText>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/months" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="@dimen/label_total_interest"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/total_interest" />

                    <EditText
                        android:id="@+id/edittext_total_interest"
                        style="@style/disableTextColor"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:enabled="false"
                        android:gravity="center_horizontal"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:singleLine="true" >
                    </EditText>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/currency" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/base_view"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_below="@+id/layout_search_fields" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/synchronized_view" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/layout_content"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/gray"
                        android:orientation="vertical"
                        android:paddingBottom="1dip" >
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/synchronized_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/base_view"
                android:background="@android:color/holo_blue_light"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/total_amount"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/edittext_total_amount"
                        style="@style/disableTextColor"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:enabled="false"
                        android:gravity="center_horizontal"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="@color/white" >
                    </EditText>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/currency"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </com.xrigau.syncscrolling.view.SynchronizedRelativeLayout>
    </com.xrigau.syncscrolling.view.EnhancedScrollView>

    <Button
        android:id="@+id/retry"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_blue_light"
        android:text="@string/retry"
        android:textColor="@android:color/white" />

</RelativeLayout>